src/styles/other.css
:root {
  --text-color: black;
  --bs-dark-rgb: 33, 37, 41;
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-color: white;
  }
}

[data-bs-theme=dark] {
  --bs-heading-color: #fff !important;
}

html, body {
  overflow-x: hidden !important;
}

.navbar .navbar-brand {
  --bs-navbar-brand-padding-y: .3125rem;
}

.nav-link {
  display: block !important;
}

.dropdown-toggle:after {
  display: inline-block;
  margin-left: .255em;
  vertical-align: .255em;
  content: "";
  border-top: .3em solid;
  border-right: .3em solid transparent;
  border-bottom: 0;
  border-left: .3em solid transparent;
}

.hero {
  width: 100%;
  position: relative;
  z-index: 1000;
  background-size: cover !important;
  background-position: center center !important;
  background-repeat: no-repeat !important;   
}

.hero-back {
  border-bottom: solid 1px #dee2e6;
  background-color: rgba(0, 0, 0, 0.6);
}

.hero-filter {
  filter: drop-shadow(2px 4px 6px black)
}

.hero-web {
  background: url('/media/images/hero-web.webp');
}

.hero-stories {
  background: url('/media/images/hero-stories.webp');
}

.hero-flash {
  background: url('/media/images/hero-flash.webp');
}

.hero-main {
	background: url('/media/images/hero.webp');
}

.hero-codinghome  {
	background: url('/media/images/hero-codinghome.webp');
}

.hero-ehs {
	background: url('/media/images/hero-ehs.webp');
}

.hero-script {
	background: url('/media/images/hero-script.webp');
}

.hero-noodle {
	background: url('/media/images/hero-noodle.webp');
} 

.hero-sms {
	background: url('/media/images/hero-sms.webp');
}

.hero-mdickie {
	background: url('/media/images/hero-mdickie.webp');
} 

.hero-roms {
	background: url('/media/images/hero-roms.webp');
} 

.hero-blue {
  background: url('/media/images/Screenshot_8-3-2025_233010_other.atproducts.xyz.jpeg');
}

.hero-radium {
  background: url('/media/images/image_1756592809181.webp');
}

.hero-minefalls {
  background: url('/media/images/Screenshot 2025-08-04 173219.png');
}

.accordion-body p:last-child {
  margin-bottom: 0 !important;
}

a:not(p a), p, code:not(p code), b:not(p b), i:not(p i) { /* Custom */
	margin-block-start: 0 !important;
}

a {
  text-underline-offset: .25rem;
  text-decoration-color: rgba(var(--bs-link-color-rgb), 0.25);
}

@media (min-width: 645.98px) {
  .container-xsm, .container-sm, .container {
    max-width: 540px;
    margin-right: auto;
    margin-left: auto;
  }
}
@media (min-width: 768px) {
  .container-md, .container-sm, .container-xsm, .container {
    max-width: 720px;
  }
}
@media (min-width: 992px) {
  .container-lg, .container-md, .container-sm, .container-xsm, .container {
    max-width: 960px;
  }
}
@media (min-width: 1200px) {
  .container-xl, .container-lg, .container-md, .container-sm, .container-xsm, .container {
    max-width: 1140px;
  }
}
@media (min-width: 1400px) {
  .container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container-xsm, .container {
    max-width: 1320px;
  }
}

@media (min-width: 767.98px) {
  .container-footer {
    --bs-gutter-x: 1.5rem;
    --bs-gutter-y: 0;
    padding-right: calc(var(--bs-gutter-x) * .5); 
    padding-left: calc(var(--bs-gutter-x) * .5);
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 700px) {
  .container-footer {
      max-width: 960px;
  }
}
@media (min-width: 1200px) {
  .container-footer {
     max-width: 1140px;
  }
}
@media (min-width: 1400px) {
  .container-footer {
      max-width: 1320px;
  }
}

@media (min-width:767.98px) {
  .row {
    --bs-gutter-x: 1.5rem;
    display: flex;
    flex-wrap: wrap;
  }
}

@media (min-width:767.98px) {
  .row {
    margin-top: calc(-1 * var(--bs-gutter-y));
    margin-right: calc(-.5 * var(--bs-gutter-x));
    margin-left: calc(-.5 * var(--bs-gutter-x));
  }
}

.btn-square {
  width: 36px;
  height: 36px;
}

.btn-sm-square {
  width: 28px;
  height: 28px;
}

.btn-lg-square {
  width: 46px;
  height: 46px;
}

.btn-square,
.btn-sm-square,
.btn-lg-square {
  padding-left: 0;
  padding-right: 0;
  text-align: center;
}

.dropdown-menu {
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

@keyframes slideIn {
  0% {
    transform: translateY(1rem);
    opacity: 0;
  }

  100% {
    transform: translateY(0rem);
    opacity: 1;
  }

  0% {
    transform: translateY(1rem);
    opacity: 0;
  }
}

@-webkit-keyframes slideIn {
  0% {
    -webkit-transform: transform;
    -webkit-opacity: 0;
  }

  100% {
    -webkit-transform: translateY(0);
    -webkit-opacity: 1;
  }

  0% {
    -webkit-transform: translateY(1rem);
    -webkit-opacity: 0;
  }
}

@keyframes pageslideIn {
  0% {
    transform: translateY(3.5rem);
    opacity: 0;
  }

  100% {
    opacity: 1;
  }

  0% {
    transform: translateY(3.5rem);
    opacity: 0;
  }
}

@-webkit-keyframes pageslideIn {
  0% {
    -webkit-transform: transform;
    -webkit-opacity: 0;
  }

  100% {
    -webkit-opacity: 1;
  }

  0% {
    -webkit-transform: translateY(3.5rem);
    -webkit-opacity: 0;
  }
}

@media (prefers-reduced-motion: reduce) {
  @keyframes slideIn {
    0% {
      transform: translateY(0);
      opacity: 1;
    }

    100% {
      transform: translateY(0);
      opacity: 1;
    }
  }

  @-webkit-keyframes slideIn {
    0% {
      -webkit-transform: translateY(0);
      opacity: 1;
    }

    100% {
      -webkit-transform: translateY(0);
      opacity: 1;
    }
  }

  @keyframes pageslideIn {
    0% {
      opacity: 1;
    }

    100% {
      opacity: 1;
    }
  }

  @-webkit-keyframes pageslideIn {
    0% {
      opacity: 1;
    }

    100% {
      opacity: 1;
    }
  }
}

.dropdown-menu {
  -webkit-animation-name: pageslideIn;
  animation-name: pageslideIn;
}

.navbar .dropdown-menu {
  -webkit-animation-name: slideIn;
  animation-name: slideIn;
  z-index: 2900;
}

.btn-group,
.btn-group-vertical {
  position: relative;
  display: inline-flex;
  vertical-align: middle;
}
/* ... */

